<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="11dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/help_stars_up_dialog_top"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/stars_dialog_has_up"
                android:textColor="#2c2c2c"
                android:textSize="17sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/stars_dialog_effect_methods_tip"
                android:textColor="#992c2c2c"
                android:textSize="13sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/stars_dialog_effect_methods"
                android:textSize="14sp"
                android:textColor="#2c2c2c"
                android:lineSpacingMultiplier="1.5"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/dialog_submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/stars_dialog_i_know"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@drawable/textview_corner_red"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>