<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@drawable/shape_video_circle_round_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="21dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:lineSpacingExtra="7dp"
            android:text="@string/video_detail_circle_play_dialog_title2"
            android:textColor="#181818"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dialog_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:layout_marginBottom="25dp"
            android:text="@string/video_detail_circle_play_dialog_tip"
            android:textColor="#999999"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#CCC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_cancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/video_detail_circle_play_dialog_submit"
                android:textColor="#999999"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#CCC" />

            <TextView
                android:id="@+id/dialog_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:padding="15dp"
                android:text="@string/video_detail_circle_play_dialog_cancle"
                android:textColor="#fa3a5d"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>